Compile Utils.cpp

--- a/lib/CppHinter-inst/CMakeLists.txt
+++ b/lib/CppHinter-inst/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library(CppHinter-inst
         CollectDebugDataPass.cpp
+        Utils.cpp
         ../../include/Utils.h
         ../../include/CollectDebugDataPass.h)
 
