--- a/tools/HintRefactor/CMakeLists.txt
+++ b/tools/HintRefactor/CMakeLists.txt
@@ -1,10 +1,6 @@
-configure_file("${CMAKE_CURRENT_SOURCE_DIR}/config.h.cmake" 
-               "${CMAKE_CURRENT_BINARY_DIR}/config.h" @ONLY
-)
-include_directories(${CMAKE_CURRENT_BINARY_DIR})
-
-add_executable(CppHinter
-  main.cpp
+add_library(HintRefactor
+  STATIC
+  HintRefactor.cpp
 )
 
 llvm_map_components_to_libnames(REQ_LLVM_LIBRARIES ${LLVM_TARGETS_TO_BUILD}
@@ -12,7 +8,7 @@ llvm_map_components_to_libnames(REQ_LLVM_LIBRARIES ${LLVM_TARGETS_TO_BUILD}
         analysis target mc support
 )
 
-target_link_libraries(CppHinter CppHinter-inst ${REQ_LLVM_LIBRARIES})
+target_link_libraries(HintRefactor ${REQ_LLVM_LIBRARIES})
 
 # Platform dependencies.
 if( WIN32 )
@@ -23,21 +19,20 @@ if( WIN32 )
 else()
   find_package(Threads REQUIRED)
   find_package(Curses REQUIRED)
-  target_link_libraries(CppHinter
+  target_link_libraries(HintRefactor
     ${CMAKE_THREAD_LIBS_INIT}
     ${CMAKE_DL_LIBS}
     ${CURSES_LIBRARIES}
   )
 endif()
 
-add_dependencies(CppHinter CppHinter-rt)
-set_target_properties(CppHinter
+set_target_properties(HintRefactor
                       PROPERTIES
                       LINKER_LANGUAGE CXX
                       PREFIX ""
 )
 
-install(TARGETS CppHinter
-  RUNTIME DESTINATION bin
+install(TARGETS HintRefactor
+  ARCHIVE DESTINATION libs
 )
 
